crates/nash-ir/src/snapshots/nash_ir__static_lift__tests__partial_self_call_is_unchanged.snap
---
source: crates/nash-ir/src/static_lift.rs
assertion_line: 223
expression: "fixture(false, true)"
---
--- core before
letrec
  f#1 : int -> int -> int [static []] = \fixed#2 : int n#3 : int -> let partial#4 : int -> int = f#1 fixed#2 in
  42
in
f#1
--- core after
letrec
  f#1 : int -> int -> int [static []] = \fixed#2 : int n#3 : int -> let partial#4 : int -> int = f#1 fixed#2 in
  42
in
f#1
